--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "tasty-bytes",
   "version": "0.1.0",
+  "engines": {
+    "node": "12.x"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
@@ -28,7 +31,7 @@
     "deploy": "git push heroku master",
     "logs:prod": "heroku logs --tail",
     "lint": "eslint .",
-    "test": "cross-env NODE_ENV=test node index.js"
+    "test": "cross-env NODE_ENV=test node server"
   },
   "eslintConfig": {
     "extends": [
