--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   },
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "bcrypt": "^5.0.0",
@@ -18,26 +17,16 @@
     "lint": "^0.7.0",
     "mongoose": "^5.11.12",
     "mongoose-unique-validator": "^2.0.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "node server",
-    "build": "react-scripts build",
-    "testOld": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "build": "cd react-ui && npm install && npm run build",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "deploy": "git push heroku master",
     "logs:prod": "heroku logs --tail",
     "lint": "eslint .",
     "test": "cross-env NODE_ENV=test node server"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -54,10 +43,6 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
-    "jest": "^26.6.0",
     "supertest": "^6.1.1"
-  },
-  "jest": {
-    "testEnvironment": "node"
   }
 }
